<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_customer"
    app:startDestination="@id/navigation_shop">

    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.example.shope.ui.customer.ShopFragment"
        android:label="@string/shop"
        tools:layout="@layout/fragment_shop" />

    <fragment
        android:id="@+id/navigation_my_orders"
        android:name="com.example.shope.ui.customer.MyOrdersFragment"
        android:label="@string/my_orders"
        tools:layout="@layout/fragment_my_orders" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.shope.ui.customer.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart">
        <action
            android:id="@+id/action_navigation_cart_to_navigation_billing"
            app:destination="@id/navigation_billing" />
    </fragment>

    <fragment
        android:id="@+id/navigation_billing"
        android:name="com.example.shope.ui.customer.BillingFragment"
        android:label="Billing"
        tools:layout="@layout/fragment_billing">
        <action
            android:id="@+id/action_navigation_billing_to_orderSuccessFragment"
            app:destination="@id/orderSuccessFragment"
            app:popUpTo="@id/navigation_shop"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/orderSuccessFragment"
        android:name="com.example.shope.ui.customer.OrderSuccessFragment"
        android:label="Order Success"
        tools:layout="@layout/fragment_order_success" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.shope.ui.customer.CustomerProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_customer_profile" />

</navigation>
